--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -24,4 +24,12 @@ spec:
         image: 360162455068.dkr.ecr.eu-west-1.amazonaws.com/ui-crud:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 8080
+        - containerPort: 3000
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 3000
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 3000
